2013-01-14  Tim 'mithro' Ansell  <mithro@mithis.com>

        Adding an error string to AmbiguousCommitError.
        https://bugs.webkit.org/show_bug.cgi?id=106846

        Reviewed by Adam Barth.

        * Scripts/webkitpy/common/checkout/scm/git.py:
        (AmbiguousCommitError.__init__):

2013-01-14  Dirk Pranke  <dpranke@chromium.org>

        kill whole lighttpd process tree for chromium win
        https://bugs.webkit.org/show_bug.cgi?id=106838

        Reviewed by Tony Chang.

        Land a speculative fix for lighttpd.exe hanging on some chromium bots;
        I think a test is causing a httpd server child process to wedge and
        killing the parent httpd server process isn't sufficient to ensure
        that the children are also killed.

        * Scripts/webkitpy/layout_tests/servers/http_server.py:
        (Lighttpd._check_and_kill):
        * Scripts/webkitpy/layout_tests/servers/http_server_unittest.py:
        (TestHttpServer.test_start_cmd):
        (TestHttpServer):
        (TestHttpServer.test_win32_start_and_stop):
        (TestHttpServer.test_win32_start_and_stop.wait_for_action):
        (TestHttpServer.test_win32_start_and_stop.mock_returns):
        (TestHttpServer.test_win32_start_and_stop.mock_returns.return_value_thunk):

2013-01-14  Nico Weber  <thakis@chromium.org>

        [chromium] Enable `update-webkit --chromium --ninja` on windows
        https://bugs.webkit.org/show_bug.cgi?id=106836

        Reviewed by Eric Seidel.

        After running this, build-webkit --chromium will use ninja to build.
        Apparently there are some minor issues with that still, so it's
        not quite ready for use yet.

        * Scripts/webkitdirs.pm:
        (determineIsChromiumNinja):
        (buildChromium):

2013-01-14  Dirk Pranke  <dpranke@chromium.org>

        nrwt: use the same search path for baselines and TestExpectations on apple mac
        https://bugs.webkit.org/show_bug.cgi?id=105599

        Reviewed by Ryosuke Niwa.
